samples/_failures_safe/1761289377_a76baf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4426464c.c: In function ‘main’:
./samples/SAFE/__tmp_4426464c.c:164:12: error: missing terminating " character
  164 |     printf("Available events: 0=START
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4426464c.c:164:5: error: expected expression at end of input
  164 |     printf("Available events: 0=START
      |     ^~~~~~
./samples/SAFE/__tmp_4426464c.c:164:5: error: expected declaration or statement at end of input
